fixed album display on mobile devices

--- a/public/assets/css/album.css
+++ b/public/assets/css/album.css
@@ -87,6 +87,40 @@ main {
     z-index: 1;
 }
 
+.option-button {
+    width: 50px;
+    height: 50px;
+    position: relative;
+    z-index: 1;
+}
+
+.submenu {
+    padding: 10px 0;
+    display: none;
+    background-color: rgba(52, 52, 52, 0.98);
+    position: absolute;
+    right: 100%;
+    bottom: 20%;
+    z-index: 1;
+    white-space: nowrap;
+}
+
+.submenu ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.submenu ul li {
+    padding: 0;
+    cursor: pointer;
+}
+
+.submenu ul li a {
+    display: block;
+    padding: 8px 10px;
+}
+
 .more_options {
     width: 100%;
     height: 100%;
